gradient overflow fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,27 @@
+:root {
+	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
+
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
+
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
 body {
 	margin: 0;
 	display: flex;
 	place-items: center;
-	
+
 	min-width: 320px;
+	width: 100%;
 	min-height: 100vh;
+}
+
+#root {
+	width: 100%;
 }
